[package]
name = "dvb_gse_tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dvb_gse_rust = { git = "https://github.com/viveris/dvb_gse_rust.git", tag = "v0.5.0" }
tun-tap = "0.1.3"
rand = "0.8.5"

[[bin]]
name = "satencap"
path = "src/satencap.rs"


[[bin]]
name = "satdecap"
path = "src/satdecap.rs"
