[package]
name = "dvb_gse_tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
dvb_gse_rust = { git = "https://github.com/viveris/dvb_gse_rust.git", tag = "v0.8.0" }
tokio-tun = "0.11.5"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

[[bin]]
name = "satencap"
path = "src/satencap.rs"


[[bin]]
name = "satdecap"
path = "src/satdecap.rs"
