[package]
name = "dvb_gse_tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1.3"

[[bin]]
name = "satencap"
path = "src/satencap.rs"


[[bin]]
name = "satdecap"
path = "src/satdecap.rs"
